--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ baseurl: '/PanelCV' #change it according to your repository name
 
 
 # Profile information
-yourname: Brown Smith  ## put your name
-title: 'GRAPHIC &amp; WEB DESIGNER'  ## your title
-location: San Francisco , CA
+yourname: Magaly Musser
+title: 'GRAPHIC &amp; Project Manager
+location: Miami, Fl
 
 
 ## Social Profiles
