--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: '/PanelCV' #change it according to your repository name
 
 # Profile information
 yourname: Magaly Musser
-title: 'GRAPHIC &amp; Project Manager
+title: Project Manager
 location: Miami, Fl
 
 
