--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: My 
+title: My gfdfxcfg
 url: 'http://junlulocky.com'
 baseurl: '/PanelCV' #change it according to your repository name
 
@@ -8,7 +8,7 @@ baseurl: '/PanelCV' #change it according to your repository name
 # Profile information
 yourname: Magaly Musser
 title: Project Manager
-location: Miami, Fl
+location: Miami, Flghj
 
 
 ## Social Profiles
